--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-        <meta charset="utf-8">
+   <head>
+      <meta charset="utf-8">
         <title>My First Bitstarter</title>
         <link type="text/css" rel="stylesheet"
               href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
@@ -48,10 +48,11 @@
                     Blank
                 </div>
                 <div class="span4 about">
-                    Blank
+                    About
                 </div>
-                <div class="row heading">
-                    <div class="span12">
+             </div>
+             <div class="row heading">
+                  <div class="span12">
                       <h1>Bitstarter Title</h1>
                     </div>
                 </div>
@@ -60,22 +61,22 @@
                     <p class="lead">This is my first bitstarter project.</p>
                   </div>
                 </div>
-                <di class="row pitch">
+                <div class="row pitch">
                     <div class="span6 video">
                         Video
                     </div>
-                <div class="span6">
-                    <div class="thermometer">
-                        Thermometer
-                    </div>
-                    <div class="order">
-                        Order
-                    </div>
-                    <div class="social">
-                        Social
-                    </div>
-                </div>
-            <div>
+                    <div class="span6">
+                       <div class="thermometer">
+                          Thermometer
+                       </div>
+                       <div class="order">
+                          Order
+                       </div>
+                       <div class="social">
+                          Social
+                       </div>
+                   </div>
+               </div>
             <div class="row section1">
                 <div class="span12">
                     Marketing Section 1
@@ -99,3 +100,4 @@
         </div>
     </body>
 </html>
+
